--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.0.1-DEV"
 [deps]
 DRiL = "49b37b9d-a8e6-4364-9144-4677bcb8a7f0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [weakdeps]
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
@@ -15,6 +16,7 @@ ClassicControlEnvironmentsMakieExt = "Makie"
 
 [compat]
 Random = "1.11.0"
+Reexport = "1.2.2"
 julia = "1.10"
 
 [extras]
@@ -22,6 +24,3 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
-
-[sources]
-DRiL = {url = "https://github.com/KristianHolme/DRiL.jl"}
