--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ClassicControlEnvironments"
 uuid = "a1069ede-d5f9-41a5-87b2-adf4ef867b86"
 authors = ["Kristian Holme <holme.kristian@gmail.com>"]
-version = "0.0.1-DEV"
+version = "0.0.1"
 
 [deps]
 DRiL = "49b37b9d-a8e6-4364-9144-4677bcb8a7f0"
